# freediving_manager

./: .gitignore  pyproject.toml
doc/source/: conf.py  index.rst
fdm/: __init__.py  contest.py  dive.py  diver.py  rules.py  startlist.py
