[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fdm"
version = "0.0"
authors = [
  { name="Bertrand Néron", email="freeh4cker@gmail.com" },
]
description = "A package to help to manage starting lists and results of a depth freediving challenge."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Unix",
    "Intended Audience :: End Users/Desktop",
    "Environment :: Console",
    "Development Status :: 2 - Pre-Alpha"
]

[project.optional-dependencies]
dev = [
    'sphinx',
    'sphinx_rtd_theme',
    'sphinx-autodoc-typehints',
    'coverage',
    'ruff',
    'pre-commit'
]

[project.urls]
Homepage = "https://github.com/freeh4cker/freediving_manager"
Issues = "https://github.com/freeh4cker/freediving_manager/issues"

#[project.scripts]
#fdm = ""


[tool.coverage.run]
branch = true
include = ["fdm/*.py"]
command_line = "-m unittest discover -vv -s tests "

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

src = ['seqdd', 'tests']
[tool.ruff.format]
indent-style = "space"
